# Learning-Projects

./: .gitignore
GoujiRecognition/: easyDemo.py  easyDemo.spec  easyDemo2.py  pyproject.toml  test1.1.py  test1.py  test2.py  testFont.py
GoujiRecognition/rank_templates/: test1.1.py
Java/StudentManagementSystem/src/main/java/org/example/: Main.java  Student.java  User.java
Java/puzzle/: pom.xml
Java/puzzle/src/main/java/org/example/: GameJFrame.java  LoginJFrame.java  Main.java  RegisterJFrame.java
JavaWeb/VueTest/vue-project/: package-lock.json
JavaWeb/VueTest/vue-project/src/: App.vue
image_processing/: jpg2CADstep.py
spider/Cronica/: Cronica.py  Cronica_test.py  FindString.py  README.md  getCategory.py  only_title+unique.py  spiderBasedUrl.py
spider/amazonBook/: getContent.py  title_url.py  util.py
spider/busqueda/: XML_lowercase.py  downloadXML.py  extractURLfromXML.py  getContent.py  util.py
spider/casadellibro/: delete_detailed_description.py  getContent.py  title_author_url.py
spider/elobservador/: README.md  downloadXML.py  extractURLfromXML.py  getContent.py  test.py  util.py
spider/elpais/: README.md  cloudflareTest.py  downloadSitemap.py  elpais_old.py  emptyContent.py  extractCategory.py  extractERROR.py  extractXML.py  getCategory.py  getContent.py  processXMLdata.py  util.py
